# gascan

./: .gitignore  Cargo.toml  README.md
.github/workflows/: workspace-bundles.yml
.superpowers/sdd/: apple-container-schema-report.md  apple-inspect-fix-report.md  connected-build-diagnostics-report.md  connected-helper-path-report.md  connected-public-task-6-report.md  elixir-erlang-dependency-report.md  offline-task-3-report.md  offline-task-4-report.md  offline-task-5-report.md  p1-task-5-report.md  p2-task-1-report.md  p2-task-2-report.md  p2-task-3-report.md  p2-task-4-report.md  p2-task-5-brief.md  p2-task-5-report.md  p2-task-6-report.md  p2-task-7-report.md  p2-task-8-report.md  p4-task-1-report.md  p4-task-2-report.md  p4-task-3-report.md  per-sandbox-final-fixes-report.md  progress.md  receipt-publication-fix-report.md  task-2-report.md  task-4-report.md  task-5-report.md  task-6-report.md  workspace-identity-report.md
crates/gascan/: Cargo.toml
crates/gascan-apple/: Cargo.toml
crates/gascan-apple/src/: attach.rs  backend.rs  command.rs  helper_protocol.rs  inspect.rs  lib.rs  probe.rs  translate.rs
crates/gascan-apple/tests/: attach_configuration.rs  attach_protocol.rs  attach_session.rs  backend_fake_runner.rs  command_runner.rs  inspect.rs  live.rs  probe.rs  translate.rs
crates/gascan-apple/tests/fixtures/: container-list-mixed-1.0.json  container-running-1.0.json  container-stopped-1.0.json  system-status-1.1.0.json  system-version-1.0.0.json  system-version-unsupported.json  translate-create-offline.json
crates/gascan-apple/tests/fixtures/fake-attach-helper/: Cargo.toml
crates/gascan-apple/tests/fixtures/fake-attach-helper/src/: main.rs
crates/gascan-apple/tests/live/: attach.rs  backend_contract.rs  lifecycle.rs  network.rs  resources.rs  storage.rs
crates/gascan-apple/tests/live/common/: mod.rs
crates/gascan-apple/tests/support/: mod.rs
crates/gascan-core/: Cargo.toml
crates/gascan-core/src/: doctor.rs  fake_runtime.rs  gascamp.rs  lib.rs  manifest.rs  policy.rs  provision.rs  runtime.rs  sandbox.rs
crates/gascan-core/tests/: backend_contract.rs  doctor.rs  gascamp_source.rs  manifest.rs  policy.rs  provision_plan.rs  runtime_capabilities.rs  sandbox_identity.rs  setup_policy.rs
crates/gascan-core/tests/common/: mod.rs
crates/gascan-e2e/: Cargo.toml
crates/gascan-e2e/src/: lib.rs
crates/gascan-e2e/tests/: apple_apply.rs  apple_lifecycle.rs  apple_recovery.rs  apple_security.rs  autostart.rs  doctor.rs  fake_backend.rs  version.rs
crates/gascan-e2e/tests/apple_common/: mod.rs
crates/gascan-proto/: Cargo.toml  build.rs
crates/gascan-proto/src/: lib.rs
crates/gascan-proto/tests/: api_compatibility.rs
crates/gascan/src/: cli.rs  client.rs  main.rs  presentation.rs  terminal.rs
crates/gascand/: Cargo.toml
crates/gascand/migrations/: 001_initial.sql  002_durable_metadata.sql  003_storage_resolution.sql
crates/gascand/src/: api.rs  lib.rs  main.rs  reconcile.rs  service.rs  socket.rs  store.rs
crates/gascand/tests/: apply_setup.rs  apply_tools.rs  attach_bridge.rs  backend_selection.rs  daemon_idle.rs  doctor_state.rs  lifecycle.rs  reconcile.rs  socket_security.rs  store.rs
docs/evidence/: apple-build-secret.md  connected-image-handoff.md  connected-workspace-image.md  gate-3-fake-e2e.md  offline-image-build.md
docs/feasibility/: apple-container-report.md  apple-container-template.md
docs/release/: macos-checklist.md  releasing.md
docs/status/: macos-mvp-handoff.md
docs/superpowers/plans/: 2026-07-13-apple-backend-lifecycle.md  2026-07-13-apple-runtime-feasibility.md  2026-07-13-core-control-plane.md  2026-07-13-gascan-macos-roadmap.md  2026-07-13-workspace-environment-release.md  2026-07-14-offline-workspace-image-bundles.md  2026-07-15-connected-workspace-image.md  2026-07-21-actionable-request-errors.md  2026-07-21-signed-release-distribution.md  (+7 more)
helpers/apple-attach/: Package.resolved  Package.swift
images/workspace/: Dockerfile  approved-image.txt  versions.toml
packaging/macos/: default-gascan.toml  install.sh  package.sh  publish.sh  release-common.sh  release-config.sh  release-gates.sh  release-recovery.sh  release-smoke.sh  release.sh  render-cask.sh  uninstall.sh  verify-package.sh
scripts/: Cargo.toml  apple-e2e-cleanup.sh  apple-e2e-session-root.sh  apple-test-preflight.sh  build-apple-attach-helper.sh  build-connected-workspace-image.sh  build-offline-workspace-image.sh  build-workspace-image.sh  install-snapshot-helper.sh  prefetch-connected-workspace-image.sh  prefetch-workspace-image.sh  probe-apple-build-secret.sh  produce-gascamp-bundle.sh  produce-mise-runtime-bundle.sh  produce-ubuntu-package-bundle.sh  run-apple-e2e.sh  run-connected-image-gate.sh  run-offline-image-gate.sh  snapshot-workspace-context.sudoers  validate-connected-image-receipt.sh  verify-ubuntu-debian-evidence.py  verify-workspace-image-inputs.sh
scripts/src/: bundle.rs  lib.rs
scripts/tests/: apple_build_secret.rs  apple_e2e_cleanup.rs  apple_e2e_runner.rs  artifact_redirect.rs  build_output_sanitizer.rs  chromium_archive.rs  connected_dockerfile.rs  connected_image_build.rs  connected_image_gate.rs  connected_workspace_context.rs  container_ownership.rs  gascamp_build_secret.rs  gascamp_bundle.rs  image_inspect.rs  image_lock.rs  image_user_contract.rs  mise_runtime_bundle.rs  offline_dockerfile.rs  offline_image_gate.rs  polyglot_image_contract.rs  security_acceptance.rs  smoke_cleanup.rs  tool_versions.rs  ubuntu_package_bundle.rs  workspace_bundle.rs  workspace_context.rs  workspace_snapshot.rs
tests/image/: container-cli.sh  gascamp-smoke.sh  polyglot-smoke.sh  system-tools.txt  user-and-volumes.sh
tests/release/: cask-contract.sh  clean-host-contract.sh  clean-host.sh  distributable-package-contract.sh  installer-contract.sh  orchestration-contract.sh  publish-contract.sh  release-script-contract.sh  signal-contract.sh  smoke-contract.sh  source-input-contract.sh  source-signature-contract.sh
tests/security/: assert-unreachable.sh  host-boundary.sh  offline-network.sh  ports.sh  resources.sh  run.sh
(+23 files in other folders)
