[workspace]
members = ["crates/gascan-apple", "crates/gascan-core"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["io-util", "process", "rt", "sync"] }
portable-pty = "=0.9.0"
nix = { version = "=0.31.3", default-features = false, features = ["process", "signal"] }
anyhow = "=1.0.103"

[workspace.lints.rust]
unsafe_code = "forbid"
