[workspace]
members = ["crates/gascan", "crates/gascan-apple", "crates/gascan-core", "crates/gascan-e2e", "crates/gascan-proto", "crates/gascand"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
base64 = "0.22"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
rustix = { version = "1", features = ["fs", "process"] }
camino = { version = "1", features = ["serde1"] }
sha2 = "0.10"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
tower = "0.4"
hyper-util = { version = "0.1", features = ["tokio"] }
getrandom = "0.4"
clap = { version = "4", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"
