[package]
name = "gascan-image-tools"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[workspace]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
toml = "0.8"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[lints.rust]
unsafe_code = "forbid"
