[package]
name = "gascan-apple"
version = "0.1.5"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
camino.workspace = true
gascan-core = { path = "../gascan-core" }
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true

[dev-dependencies]
libc = "0.2"
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt", "time"] }

[lints]
workspace = true
