[package]
name = "gascan-core"
version = "0.1.6"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
camino.workspace = true
sha2.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rustix.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
