[package]
name = "gascan-e2e"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "gascan-e2e-cli"
path = "../gascan/src/main.rs"

[[bin]]
name = "gascan-e2e-daemon"
path = "../gascand/src/main.rs"

[dependencies]
async-trait.workspace = true
clap.workspace = true
gascan-core = { path = "../gascan-core" }
gascan-proto = { path = "../gascan-proto" }
gascand = { path = "../gascand" }
hyper-util.workspace = true
prost-types.workspace = true
rustix = { workspace = true, features = ["termios"] }
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tower.workspace = true

[dev-dependencies]
tempfile = "3"
rustix-openpty = "0.2"

[lints]
workspace = true
