[package]
name = "gascand"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
camino.workspace = true
gascan-core = { path = "../gascan-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
